[metadata]
name = stsci.sphinxext
version = 1.2.2.dev
author = Michael Droettboom
author-email = mdroe@stsci.edu
home-page = http://www.scipy.org/AstroLib
summary = 
	A set of tools and templates to customize Sphinx for use in STScI projects
description-file = README
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Topic :: Software Development :: Documentation

[files]
packages_root = lib
packages = 
	stsci
	stsci.sphinxext
package_data = 
	stsci.sphinxext = latex/*.*
	stsci_sphinx_theme/*.*
	stsci_sphinx_theme/static/*.*

[global]
setup-hooks = stsci.distutils.hooks.version_setup_hook

